--- a/src/app/componentes/principal/principal/principal.component.html
+++ b/src/app/componentes/principal/principal/principal.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-    <a class="navbar-brand" href="/principal" *ngIf="!isLogged">Principal</a>
+    <a class="navbar-brand" href="/principal" *ngIf='!isLogged'>Principal</a>
     <a class="navbar-brand" href="/principal" *ngIf="isLogged">Diseños y Rolados S.A</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -7,7 +7,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item" *ngIf="!isLogged">
+            <li class="nav-item" *ngIf='!isLogged'>
                 <a class="nav-link" [routerLink]="['/principal/nuestros-productos']" routerLinkActive="active"> Nuestros Productos </a>
             </li>
             <li class="nav-item" *ngIf="!isLogged">
