--- a/src/app/componentes/models/horario/horario.component.html
+++ b/src/app/componentes/models/horario/horario.component.html
@@ -1,1 +1,27 @@
-<p>horario works!</p>
+<div class="modal fade" id="modalHorario" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Nuevo Horario</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+            </div>
+            <div class="modal-body ">
+                <form id="formulario" name="formulario" #myform="ngForm" (ngSubmit)="onSubmit(myform)">
+                    <!-- <div class="form-label-group" class="form-group">
+                        <input type="hidden" id="$id" name="$id" #$id="ngModel" [(ngModel)]="this.horario.nuevohorario.$id" class="form-control">
+                    </div> -->
+                    <div class="form-label-group" class="form-group">
+                        <label for="message-text" class="col-form-label">Nombre:</label>
+                        <input type="text" id="horario" class="form-control" name="horario" #horario="ngModel" [(ngModel)]="horarioService.nuevohorario.horario" placeholder="Horario">
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-block btn-secondary" #btnClose data-dismiss="modal">Cerrar</button>
+                            <button type="submit" class="btn btn-block btn-primary">Guardar </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
