--- a/src/app/componentes/nuevos/ingresos/ingresos.component.html
+++ b/src/app/componentes/nuevos/ingresos/ingresos.component.html
@@ -1,4 +1,24 @@
-<button type="button" class="btn btn-secondary" (click)="Editar()" data-toggle="modal" data-target="#modalHorario">
+<!--Horario-->
+<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modalHorario">
     Horario
 </button>
+
+<!--Medida-->
+<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modalMedida">
+    Medida
+</button>
+
+<!--Perfil-->
+<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modalPerfil">
+    Perfil
+</button>
+
+<!--Proveedor-->
+<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modalProveedor">
+    Proveedor
+</button>
+
 <work-horario></work-horario>
+<work-medida></work-medida>
+<work-perfil></work-perfil>
+<work-proveedor></work-proveedor>
