--- a/src/app/componentes/models/perfil/perfil.component.html
+++ b/src/app/componentes/models/perfil/perfil.component.html
@@ -1,1 +1,29 @@
-<p>perfil works!</p>
+<div class="modal fade" id="modalPerfil" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Nuevo Perfil</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+            </div>
+            <div class="modal-body ">
+                <form #myform="ngForm" (ngSubmit)="onSubmit(myform)">
+                    <div class="form-label-group" class="form-group">
+                        <label for="validationServer01" class="col-form-label">Perfil:</label>
+                        <input type="text" id="perfil" class="form-control" name="perfil" #perfil="ngModel" [(ngModel)]="perfilService.nuevoperfil.perfil" placeholder="Perfil">
+                        <!-- <div *ngIf="horario.invalid && (horario.dirty || horario.touched)" class="alert alert-danger">
+                            <div *ngIf="horario.errors.required">
+                                Campo requerido
+                            </div>
+                        </div> -->
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-block btn-primary">Guardar </button>
+                            <button type="button" class="btn btn-block btn-secondary" #btnClose data-dismiss="modal">Cerrar</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
