--- a/src/app/componentes/models/proveedor/proveedor.component.html
+++ b/src/app/componentes/models/proveedor/proveedor.component.html
@@ -1,1 +1,24 @@
-<p>proveedor works!</p>
+<div class="modal fade" id="modalProveedor" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Nuevo Proveedor</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+            </div>
+            <div class="modal-body ">
+                <form #myform="ngForm" (ngSubmit)="onSubmit(myform)">
+                    <div class="form-label-group" class="form-group">
+                        <label for="validationServer01" class="col-form-label">Proveedor:</label>
+                        <input type="text" id="proveedor" class="form-control" name="proveedor" #proveedor="ngModel" [(ngModel)]="proveedorservice.nuevoproveedor.proveedor" placeholder="Proveedor">
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-block btn-primary">Guardar </button>
+                            <button type="button" class="btn btn-block btn-secondary" #btnClose data-dismiss="modal">Cerrar</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
