--- a/src/app/componentes/productos/intermedio/intermedio.component.html
+++ b/src/app/componentes/productos/intermedio/intermedio.component.html
@@ -48,15 +48,15 @@
                     <div class="card-header text-center">
                         <h1>Intermedio</h1>
                         <div class="card-body text-center">
-                            <!-- <form #productForm="ngForm" (ngSubmit)="onSubmit(productForm)">
+                            <form #productForm="ngForm" (ngSubmit)="onSubmit(productForm)">
                                 <div class="form-group">
                                     <label class="color">Fecha: </label>
-                                    <input name="fecha1" #fecha1="ngModel" [(ngModel)]="baseService.selectedProduct.fecha1" type="date" id="fecha1">
+                                    <input type="date" class="form-control" id="fecha" name="fecha" #fecha="ngModel" [(ngModel)]="intermedioConexion.selectIntermedio.fecha">
                                 </div>
-                                <input type="text" class="form-control" name="codigo1" #codigo1="ngModel" [(ngModel)]="baseService.selectedProduct.codigo1" placeholder="Codigo">
+                                <input type="number" class="form-control" id="codigo" name="codigo" #codigo="ngModel" [(ngModel)]="intermedioConexion.selectIntermedio.codigo" placeholder="Codigo">
                                 <br>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="peso1" #peso1="ngModel" [(ngModel)]="baseService.selectedProduct.peso1" placeholder="Peso">
+                                    <input type="number" class="form-control" id="peso" name="peso" #peso="ngModel" [(ngModel)]="intermedioConexion.selectIntermedio.peso" placeholder="Peso">
                                 </div>
                                 <div class="form-group">
                                     <button class="btn btn-block btn-primary" type="submit">
@@ -68,7 +68,7 @@
                                         Nuevo
                                     </button>
                                 </div>
-                            </form> -->
+                            </form>
                         </div>
                     </div>
                 </div>
