--- a/src/app/componentes/productos/nuevo/nuevo.component.html
+++ b/src/app/componentes/productos/nuevo/nuevo.component.html
@@ -51,7 +51,7 @@
                         <div class="card-body text-center">
                             <form #myform="ngForm" (ngSubmit)="onSubmit(myform)">
                                 <div class="form-label-group" class="form-group">
-                                    <select class="form-control" name="cliente" #cliente="ngModel" [(ngModel)]="conexion.selectNuevo.proveedor" value="seleccione">
+                                    <select class="form-control" id="provedor" name="proveedor" #proveedor="ngModel" [(ngModel)]="conexion.selectNuevo.proveedor" value="seleccione">
                                     <option class="placeholder" value="Seleccione"> 
                                     Seleccione un proveedor 
                                     </option>
@@ -60,11 +60,11 @@
                                     </option> 
                                 </select>
                                     <br>
-                                    <input type="text" class="form-control" name="peso" #peso="ngModel" [(ngModel)]="conexion.selectNuevo.peso" placeholder="Peso">
+                                    <input type="number" class="form-control" id="peso" name="peso" #peso="ngModel" [(ngModel)]="conexion.selectNuevo.peso" placeholder="Peso">
                                     <br>
-                                    <input type="text" class="form-control" name="codigo" #codigo="ngModel" [(ngModel)]="conexion.selectNuevo.codigo" placeholder="Codigo">
+                                    <input type="number" class="form-control" id="codigo" name="codigo" #codigo="ngModel" [(ngModel)]="conexion.selectNuevo.codigo" placeholder="Codigo">
                                     <br>
-                                    <input text="text" class="form-control" name="envio" #envio="ngModel" [(ngModel)]="conexion.selectNuevo.envio" placeholder="Envio">
+                                    <input text="text" class="form-control" id="envio" name="envio" #envio="ngModel" [(ngModel)]="conexion.selectNuevo.envio" placeholder="Envio">
                                 </div>
                                 <div class="form-group">
                                     <button class="btn btn-block btn-primary" type="submit">
