--- a/src/app/componentes/productos/inventario/inventario.component.html
+++ b/src/app/componentes/productos/inventario/inventario.component.html
@@ -40,7 +40,7 @@
         </ul>
     </div>
 </nav>
-<div class="container">
+<div class="container" class="mt-4">
     <div class="card ">
         <div class="card-header">
             <h1 class="color">Invetario</h1>
@@ -49,6 +49,7 @@
             <table class="table table-hover table-dark">
                 <thead>
                     <tr>
+                        <th>No.</th>
                         <th>Fecha</th>
                         <th>Cantidad</th>
                         <th>Producto</th>
