--- a/src/app/componentes/productos/nuevo/nuevo.component.html
+++ b/src/app/componentes/productos/nuevo/nuevo.component.html
@@ -1,86 +1,86 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-    <a class="navbar-brand" href="/principal" *ngIf="!isLogged">Principal</a>
-    <a class="navbar-brand" href="/principal" *ngIf="isLogged">Diseños y Rolados S.A</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item" *ngIf="!isLogged">
-                <a class="nav-link" [routerLink]="['/principal/nuestros-productos']" routerLinkActive="active"> Nuestros Productos </a>
-            </li>
-            <li class="nav-item" *ngIf="!isLogged">
-                <a class="nav-link" [routerLink]="['/principal/Contacto']" routerLinkActive="active"> Contacto </a>
-            </li>
-            <li class="nav-item" *ngIf="!isLogged">
-                <a class="nav-link" [routerLink]="['/principal/ayuda']" routerLinkActive="active"> Ayuda </a>
-            </li>
-            <li class="nav-item" *ngIf="isLogged">
-                <a class="nav-link" [routerLink]="['/principal/user/insert']" routerLinkActive="active">Ingreso de Materia Prima </a>
-            </li>
-            <li class="nav-item" *ngIf="isLogged">
-                <a class="nav-link" [routerLink]="['/principal/user/intermediate']" routerLinkActive="active"> Producto intermedio </a>
-            </li>
-            <li class="nav-item" *ngIf="isLogged">
-                <a class="nav-link" [routerLink]="['/principal/user/final']" routerLinkActive="active"> Final </a>
-            </li>
-            <li class="nav-item" *ngIf="isLogged">
-                <a class="nav-link" [routerLink]="['/principal/user/inventory']" routerLinkActive="active"> Inventario</a>
-            </li>
-        </ul>
-        <a class="navbar-brand hidden-md-down"></a>
-        <ul class="navbar-nav ml-auto">
-            <!-- <i class="fas fa-user-alt"></i> -->
-            <svg *ngIf="isLogged" class="bi bi-person-dash-fill" (click)="onClickLogout()" width=" 1em " height="1em " viewBox="0 0 16 16 " fill="currentColor " xmlns="http://www.w3.org/2000/svg ">
-                <path fill-rule="evenodd " d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 100-6 3 3 0 000 6zm5-.5a.5.5 0 01.5-.5h4a.5.5 0 010 1h-4a.5.5 0 01-.5-.5z " clip-rule="evenodd "/>
-              </svg>
-            <li class="nav-item" *ngIf="!isLogged">
-                <a class="nav-link" [routerLink]="['/login']" routerLinkActive="active"> Login </a>
-            </li>
-        </ul>
+<div class="d-flex" *ngIf="isLogged">
+    <div id="sidebar-container" class="bg-primario">
+        <div class="logo">
+            <h4 class="text-light font-weight-bold">
+                Diseños y Rolados S.A
+            </h4>
+        </div>
+        <div class="menu">
+            <a href="/principal/user/insert" class="d-block text-light p-3">
+                <i class="fas fa-plus-square mr-2 lead"></i> Materia Prima
+            </a>
+            <a href="/principal/user/intermediate" class="d-block text-light p-3">
+                <i class="fas fa-plus-square mr-2 lead"></i> Materia Intermedia
+            </a>
+            <a href="/principal/user/final" class="d-block text-light p-3">
+                <i class="fas fa-plus-square mr-2 lead"></i> Materia Final
+            </a>
+            <a href="/principal/user/inventory" class="d-block text-light p-3">
+                <i class="fas fa-indent mr-2 "></i> Inventario
+            </a>
+        </div>
     </div>
-</nav>
-<section id="insert" class="mb-5 mt-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-4 mx-auto">
-                <div class="card_login">
-                    <div class="card-header text-center">
-                        <h1>Ingreso de Materia Prima</h1>
-                        <div class="card-body text-center">
-                            <form #myform="ngForm" (ngSubmit)="onSubmit(myform)">
-                                <div class="form-label-group" class="form-group">
-                                    <select class="form-control" id="provedor" name="proveedor" #proveedor="ngModel" [(ngModel)]="conexion.selectNuevo.proveedor" value="seleccione">
-                                    <option class="placeholder" value="Seleccione"> 
-                                    Seleccione un proveedor 
-                                    </option>
-                                    <option *ngFor="let provee of ListarProveedores"> 
-                                         {{provee.proveedor}}
-                                    </option> 
-                                </select>
-                                    <br>
-                                    <input type="number" class="form-control" id="peso" name="peso" #peso="ngModel" [(ngModel)]="conexion.selectNuevo.peso" placeholder="Peso">
-                                    <br>
-                                    <input type="number" class="form-control" id="codigo" name="codigo" #codigo="ngModel" [(ngModel)]="conexion.selectNuevo.codigo" placeholder="Codigo">
-                                    <br>
-                                    <input text="text" class="form-control" id="envio" name="envio" #envio="ngModel" [(ngModel)]="conexion.selectNuevo.envio" placeholder="Envio">
+    <div class="w-100">
+        <nav class="navbar navbar-expand-lg navbar-light bg-silvere">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto ">
+                    <button class="btn" (click)="onClickLogout()">
+                        <i class="fas fa-user-cog"></i> Cerrar Sesion
+                    </button>
+                </ul>
+            </div>
+        </nav>
+        <div id="content">
+            <section class="mb-6 mt-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12 col-lg-12 col-md-12 mx-auto">
+                            <div class="card_login">
+                                <div class="card-header">
+                                    <h1 style="text-align: center;">Ingreso de Materia Prima</h1>
+                                    <div class="card-body ">
+                                        <form #myform="ngForm" (ngSubmit)="onSubmit(myform)">
+                                            <div class="form-row">
+                                                <div class="form-group col-md-12">
+                                                    <label class="font-weight-bold">Proveedor</label>
+                                                    <select class="form-control" id="provedor" name="proveedor" #proveedor="ngModel" [(ngModel)]="conexion.selectNuevo.proveedor" value="seleccione">
+                                                    <option class="placeholder " value="Seleccione "> 
+                                                        Seleccione un proveedor 
+                                                    </option>
+                                                    <option *ngFor="let provee of ListarProveedores "> 
+                                                        {{provee.proveedor}}
+                                                    </option> 
+                                                    </select>
+                                                </div>
+                                                <div class="form-group col-md-12">
+                                                    <label class="font-weight-bold">Peso</label>
+                                                    <input type="number" class="form-control" id="peso " name="peso" #peso="ngModel" [(ngModel)]="conexion.selectNuevo.peso" placeholder="">
+                                                </div>
+                                                <div class="form-group col-md-12">
+                                                    <label class="font-weight-bold">Codigo</label>
+                                                    <input type="number" class="form-control" id="codigo " name="codigo" #codigo="ngModel" [(ngModel)]="conexion.selectNuevo.codigo" placeholder="">
+                                                </div>
+                                                <div class="form-group col-md-12">
+                                                    <label class="font-weight-bold">Envio</label>
+                                                    <input text="text" class="form-control" id="envio " name="envio" #envio="ngModel" [(ngModel)]="conexion.selectNuevo.envio" placeholder="">
+                                                </div>
+                                            </div>
+                                            <div class="form-group col-md-12">
+                                                <button class="btn btn-block btn-primary font-weight-bold" type="submit">
+                                                    Ingresar
+                                                </button>
+                                            </div>
+                                        </form>
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <button class="btn btn-block btn-primary" type="submit">
-                                        Ingresar
-                                    </button>
-                                </div>
-                                <div class="form-group">
-                                    <button class="btn btn-block btn-secondary active" type="reset" (click)="resetForm(myform)"> 
-                                        Nuevo
-                                    </button>
-                                </div>
-                            </form>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </div>
     </div>
-</section>
+</div>
